hphp/test/zend/good/ext/reflection/tests/ReflectionProperty_export_basic.php
<?php

class TestClass {
    public $proper = 5;
}

var_dump(ReflectionProperty::export('TestClass', 'proper'));

?>
