hphp/test/zend/bad/ext/spl/tests/SplFixedArray_offsetUnset_invalid_parameter.php
<?php
$array = new SplFixedArray(5);
$a = $array->offsetUnset();
if(is_null($a)) {
	echo 'PASS';
}
?>